Add config and controler to ai project

--- a/ai-service/src/main/resources/application.yml
+++ b/ai-service/src/main/resources/application.yml
@@ -4,7 +4,10 @@ server:
 spring:
   application:
     name: ai-service
-
+  data:
+    mongodb:
+      uri: ${MONGO_URI}
+      database: ${MONGO_DATABASE}
 
 eureka:
   client:
