--- a/activity-service/src/main/resources/application.yml
+++ b/activity-service/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
     name: activity-service
   data:
     mongodb:
-      uri: ${MONGO_URI_ACTIVITY}
-      database: ${MONGO_DATABASE_ACTIVITY}
+      uri: ${MONGO_URI}
+      database: ${MONGO_DATABASE}
 
 eureka:
   client:
