--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
     restart: unless-stopped
+    networks:
+      - fitness_network
 
   mongodb:
     container_name: mongo_container
@@ -24,6 +26,8 @@ services:
     volumes:
       - mongo_data:/data/db
     restart: unless-stopped
+    networks:
+      - fitness_network
 
   rabbitmq:
     container_name: rabbit_container
@@ -35,7 +39,14 @@ services:
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
     restart: unless-stopped
+    networks:
+      - fitness_network
 
 volumes:
   pg_data:
   mongo_data:
+
+networks:
+  fitness_network:
+    driver: bridge
+    name: fitness_network
