--- a/ai-service/src/main/resources/application.yml
+++ b/ai-service/src/main/resources/application.yml
@@ -1,32 +1,9 @@
-server:
-  port: 8083
-
 spring:
+  config:
+    import: "configserver:"
   application:
     name: ai-service
-  data:
-    mongodb:
-      uri: ${MONGO_URI}
-      database: ${MONGO_DATABASE}
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: ${RABBITMQ_USER}
-    password: ${RABBITMQ_PASSWORD}
-
-eureka:
-  client:
-    eureka-url:
-      defaultZone: ${EUREKA_URL}
-rabbitmq:
-  exchange:
-    name: fitness.exchange
-  queue:
-    name: activity.queue
-  routing:
-    key: activity.tracking
-
-gemini:
-  api:
-    url: ${GEMINI_API_URL}
-    key:  ${GEMINI_API_KEY}
+  cloud:
+    config:
+      uri: ${CONFIG_SERVER_URL}
+      profile: dev
